components/4.22.x/mail-component.md
# Mail

**Since Camel 1.0**

**Both producer and consumer are supported**

The Mail component provides access to Email via Spring’s Mail support and the underlying JavaMail system.

Maven users will need to add the following dependency to their `pom.xml` for this component:

```xml
<dependency>
    <groupId>org.apache.camel</groupId>
    <artifactId>camel-mail</artifactId>
    <version>x.x.x</version>
    <!-- use the same version as your Camel core version -->
</dependency>
```

> **Tip**
> **POP3 or IMAP**
>
> POP3 has some limitations and end users are encouraged to use IMAP if possible.

> **Note**
> **Using mock-mail for testing**
>
> You can use a mock framework for unit testing, which allows you to test without the need for a real mail server. However, you should remember to not include the mock-mail when you go into production or other environments where you need to send mail to a real mail server. Just the presence of the mock-javamail.jar on the classpath means that it will kick in and avoid sending the mails.

## URI format

Mail endpoints can have one of the following URI formats (for the protocols, SMTP, POP3, or IMAP, respectively):

smtp://\[username@\]host\[:port\]\[?options\]
pop3://\[username@\]host\[:port\]\[?options\]
imap://\[username@\]host\[:port\]\[?options\]

The mail component also supports secure variants of these protocols (layered over SSL). You can enable the secure protocols by adding `s` to the scheme:

smtps://\[username@\]host\[:port\]\[?options\]
pop3s://\[username@\]host\[:port\]\[?options\]
imaps://\[username@\]host\[:port\]\[?options\]

## Configuring Options

Camel components are configured on two separate levels:

-   component level
    
-   endpoint level
    

### Configuring Component Options

At the component level, you set general and shared configurations that are, then, inherited by the endpoints. It is the highest configuration level.

For example, a component may have security settings, credentials for authentication, urls for network connection and so forth.

Some components only have a few options, and others may have many. Because components typically have pre-configured defaults that are commonly used, then you may often only need to configure a few options on a component; or none at all.

You can configure components using:

-   the [Component DSL](../../manual/component-dsl.md).
    
-   in a configuration file (`application.properties`, `*.yaml` files, etc).
    
-   directly in the Java code.
    

### Configuring Endpoint Options

You usually spend more time setting up endpoints because they have many options. These options help you customize what you want the endpoint to do. The options are also categorized into whether the endpoint is used as a consumer (_from_), as a producer (_to_), or both.

Configuring endpoints is most often done directly in the endpoint URI as _path_ and _query_ parameters. You can also use the [Endpoint DSL](../../manual/Endpoint-dsl.md) and [DataFormat DSL](../../manual/dataformat-dsl.md) as a _type safe_ way of configuring endpoints and data formats in Java.

A good practice when configuring options is to use [Property Placeholders](../../manual/using-propertyplaceholder.md).

Property placeholders provide a few benefits:

-   They help prevent using hardcoded urls, port numbers, sensitive information, and other settings.
    
-   They allow externalizing the configuration from the code.
    
-   They help the code to become more flexible and reusable.
    

The following two sections list all the options, firstly for the component followed by the endpoint.

## Component Options

The Mail component supports the following options which are listed below.

   
| Name | Description | Default | Type |
| --- | --- | --- | --- |
| **bridgeErrorHandler** (consumer) | Allows for bridging the consumer to the Camel routing Error Handler, which mean any exceptions (if possible) occurred while the Camel consumer is trying to pickup incoming messages, or the likes, will now be processed as a message and handled by the routing Error Handler. Important: This is only possible if the 3rd party component allows Camel to be alerted if an exception was thrown. Some components handle this internally only, and therefore bridgeErrorHandler is not possible. In other situations we may improve the Camel component to hook into the 3rd party component and make this possible for future releases. By default the consumer will use the org.apache.camel.spi.ExceptionHandler to deal with exceptions, that will be logged at WARN or ERROR level and ignored. | false | boolean |
| **closeFolder** (consumer) | Whether the consumer should close the folder after polling. Setting this option to false and having disconnect=false as well, then the consumer keeps the folder open between polls. | true | boolean |
| **copyTo** (consumer) | After processing a mail message, it can be copied to a mail folder with the given name. You can override this configuration value with a header with the key copyTo, allowing you to copy messages to folder names configured at runtime. |  | String |
| **decodeFilename** (consumer) | If set to true, the MimeUtility.decodeText method will be used to decode the filename. This is similar to setting JVM system property mail.mime.encodefilename. | false | boolean |
| **delete** (consumer) | Deletes the messages after they have been processed. This is done by setting the DELETED flag on the mail message. If false, the SEEN flag is set instead. You can override this configuration option by setting a header with the key delete to determine if the mail should be deleted or not. | false | boolean |
| **disconnect** (consumer) | Whether the consumer should disconnect after polling. If enabled, this forces Camel to connect on each poll. | false | boolean |
| **handleFailedMessage** (consumer) | If the mail consumer cannot retrieve a given mail message, then this option allows handling the caused exception by the consumer’s error handler. By enabling the bridge error handler on the consumer, then the Camel routing error handler can handle the exception instead. The default behavior would be the consumer throws an exception and no mails from the batch would be able to be routed by Camel. | false | boolean |
| **mimeDecodeHeaders** (consumer) | This option enables transparent MIME decoding and unfolding for mail headers. | false | boolean |
| **moveTo** (consumer) | After processing a mail message, it can be moved to a mail folder with the given name. You can override this configuration value with a header with the key moveTo, allowing you to move messages to folder names configured at runtime. |  | String |
| **peek** (consumer) | Will mark the jakarta.mail.Message as peeked before processing the mail message. This applies to IMAPMessage messages types only. By using peek, the mail will not be eagerly marked as SEEN on the mail server, which allows us to roll back the mail message if there is a processing error in Camel. | true | boolean |
| **skipFailedMessage** (consumer) | If the mail consumer cannot retrieve a given mail message, then this option allows skipping the message and move on to retrieve the next mail message. The default behavior would be the consumer throws an exception and no mails from the batch would be able to be routed by Camel. | false | boolean |
| **unseen** (consumer) | Whether to limit by unseen mails only. | true | boolean |
| **failOnDuplicateFileAttachment** (consumer (advanced)) | Whether to fail processing the mail if the mail message contains attachments with duplicate file names. If set to false, then the duplicate attachment is skipped and a WARN is logged. If set to true, then an exception is thrown failing to process the mail message. | false | boolean |
| **fetchSize** (consumer (advanced)) | Sets the maximum number of messages to consume during a poll. This can be used to avoid overloading a mail server, if a mailbox folder contains a lot of messages. The default value of -1 means no fetch size and all messages will be consumed. Setting the value to 0 is a special corner case, where Camel will not consume any messages at all. | \-1 | int |
| **folderName** (consumer (advanced)) | The folder to poll. | INBOX | String |
| **generateMissingAttachmentNames** (consumer (advanced)) | Set this to 'uuid' to set a UUID for the filename of the attachment if no filename was set. |  | String |
| **handleDuplicateAttachmentNames** (consumer (advanced)) | Set the strategy to handle duplicate filenames of attachments never: attachments that have a filename which is already present in the attachments will be ignored unless failOnDuplicateFileAttachment is set to true. uuidPrefix: this will prefix the duplicate attachment filenames each with an uuid and underscore (uuid\_filename.fileextension). uuidSuffix: this will suffix the duplicate attachment filenames each with an underscore and uuid (filename\_uuid.fileextension). |  | String |
| **mapMailMessage** (consumer (advanced)) | Specifies whether Camel should map the received mail message to Camel body/headers/attachments. If set to true, the body of the mail message is mapped to the body of the Camel IN message, the mail headers are mapped to IN headers, and the attachments to Camel IN attachment message. If this option is set to false, then the IN message contains a raw jakarta.mail.Message. You can retrieve this raw message by calling exchange.getIn().getBody(jakarta.mail.Message.class). | true | boolean |
| **bcc** (producer) | Sets the BCC email address. Separate multiple email addresses with comma. |  | String |
| **cc** (producer) | Sets the CC email address. Separate multiple email addresses with comma. |  | String |
| **from** (producer) | The from email address. | camel@localhost | String |
| **lazyStartProducer** (producer) | Whether the producer should be started lazy (on the first message). By starting lazy you can use this to allow CamelContext and routes to startup in situations where a producer may otherwise fail during starting and cause the route to fail being started. By deferring this startup to be lazy then the startup failure can be handled during routing messages via Camel’s routing error handlers. Beware that when the first message is processed then creating and starting the producer may take a little time and prolong the total processing time of the processing. | false | boolean |
| **replyTo** (producer) | The Reply-To recipients (the receivers of the response mail). Separate multiple email addresses with a comma. |  | String |
| **subject** (producer) | The Subject of the message being sent. Note: Setting the subject in the header takes precedence over this option. |  | String |
| **to** (producer) | Sets the destination email address. Separate multiple email addresses with comma. |  | String |
| **useHeaderFrom** (producer) | Whether message headers From and Sender override the sender pre-configured in the endpoint URI. Defaults to false. Set to true to let message headers From and Sender override the endpoint URI sender. | false | boolean |
| **useHeaderRecipients** (producer) | Whether message headers To, CC, and BCC override the recipients pre-configured in the endpoint URI. Defaults to false. Set to true to let message headers override the endpoint URI recipients. | false | boolean |
| **useHeaderReplyTo** (producer) | Whether message header Reply-To overrides the replyTo pre-configured in the endpoint URI. Defaults to false. Set to true to let the message Reply-To header override the endpoint URI replyTo. | false | boolean |
| **useHeaderSubject** (producer) | Whether message header Subject overrides the subject pre-configured in the endpoint URI. Defaults to false. Set to true to let the message Subject header override the endpoint URI subject. | false | boolean |
| **javaMailSender** (producer (advanced)) | To use a custom org.apache.camel.component.mail.JavaMailSender for sending emails. |  | JavaMailSender |
| **additionalJavaMailProperties** (advanced) | Sets additional java mail properties, that will append/override any default properties that are set based on all the other options. This is useful if you need to add some special options but want to keep the others as is. This is a multi-value option with prefix: mail. |  | Properties |
| **alternativeBodyHeader** (advanced) | Specifies the key to an IN message header that contains an alternative email body. For example, if you send emails in text/html format and want to provide an alternative mail body for non-HTML email clients, set the alternative mail body with this key as a header. | CamelMailAlternativeBody | String |
| **attachmentsContentTransferEncodingResolver** (advanced) | To use a custom AttachmentsContentTransferEncodingResolver to resolve what content-type-encoding to use for attachments. |  | AttachmentsContentTransferEncodingResolver |
| **authenticator** (advanced) | The authenticator for login. If set then the password and username are ignored. It can be used for tokens which can expire and therefore must be read dynamically. |  | MailAuthenticator |
| **autowiredEnabled** (advanced) | Whether autowiring is enabled. This is used for automatic autowiring options (the option must be marked as autowired) by looking up in the registry to find if there is a single instance of matching type, which then gets configured on the component. This can be used for automatic configuring JDBC data sources, JMS connection factories, AWS Clients, etc. | true | boolean |
| **configuration** (advanced) | Sets the Mail configuration. |  | MailConfiguration |
| **connectionTimeout** (advanced) | The connection timeout in milliseconds. | 30000 | int |
| **contentType** (advanced) | The mail message content type. Use text/html for HTML mails. | text/plain | String |
| **contentTypeResolver** (advanced) | Resolver to determine Content-Type for file attachments. |  | ContentTypeResolver |
| **debugMode** (advanced) | Enable debug mode on the underlying mail framework. The SUN Mail framework logs the debug messages to System.out by default. | false | boolean |
| **ignoreUnsupportedCharset** (advanced) | Option to let Camel ignore unsupported charset in the local JVM when sending mails. If the charset is unsupported, then charset=XXX (where XXX represents the unsupported charset) is removed from the content-type, and it relies on the platform default instead. | false | boolean |
| **ignoreUriScheme** (advanced) | Option to let Camel ignore unsupported charset in the local JVM when sending mails. If the charset is unsupported, then charset=XXX (where XXX represents the unsupported charset) is removed from the content-type, and it relies on the platform default instead. | false | boolean |
| **javaMailProperties** (advanced) | Sets the java mail options. Will clear any default properties and only use the properties provided for this method. |  | Properties |
| **maxMultipartDepth** (advanced) | The maximum nesting depth of multipart MIME parts the consumer descends into when extracting attachments. A message nested deeper than this has its deeper parts skipped, so a crafted deeply nested multipart cannot exhaust the stack. Increase it only if a legitimate source produces unusually deep nesting. | 20 | int |
| **session** (advanced) | Specifies the mail session that camel should use for all mail interactions. Useful in scenarios where mail sessions are created and managed by some other resource, such as a JavaEE container. When using a custom mail session, then the hostname and port from the mail session will be used (if configured on the session). |  | Session |
| **useInlineAttachments** (advanced) | Whether to use disposition inline or attachment. | false | boolean |
| **headerFilterStrategy** (filter) | To use a custom org.apache.camel.spi.HeaderFilterStrategy to filter header to and from Camel message. |  | HeaderFilterStrategy |
| **healthCheckConsumerEnabled** (health) | Used for enabling or disabling all consumer based health checks from this component. | true | boolean |
| **healthCheckProducerEnabled** (health) | Used for enabling or disabling all producer based health checks from this component. Notice: Camel has by default disabled all producer based health-checks. You can turn on producer checks globally by setting camel.health.producersEnabled=true. | true | boolean |
| **password** (security) | The password for login. See also setAuthenticator(MailAuthenticator). |  | String |
| **sslContextParameters** (security) | To configure security using SSLContextParameters. |  | SSLContextParameters |
| **useGlobalSslContextParameters** (security) | Enable usage of global SSL context parameters. | false | boolean |
| **useJavaMailSessionPropertiesFromHeaders** (security) | Whether to allow dynamic JavaMail session properties (message headers whose key starts with mail.smtp. or mail.smtps.) to override the endpoint configuration on a per-message basis. This is disabled by default. Only enable it when these headers originate exclusively from trusted route logic, never from data crossing a trust boundary (for example HTTP query parameters, or JMS/Kafka messages from untrusted producers). When enabled, an attacker able to set these headers could weaken transport security (such as mail.smtp.ssl.trust or mail.smtp.starttls.enable) or redirect the SMTP connection. | false | boolean |
| **username** (security) | The username for login. See also setAuthenticator(MailAuthenticator). |  | String |

## Endpoint Options

The Mail endpoint is configured using URI syntax:

imap:host:port

With the following _path_ and _query_ parameters:

### Path Parameters

   
| Name | Description | Default | Type |
| --- | --- | --- | --- |
| **host** (common) | **Required** The mail server host name. |  | String |
| **port** (common) | The port number of the mail server. |  | int |

### Query Parameters

   
| Name | Description | Default | Type |
| --- | --- | --- | --- |
| **closeFolder** (consumer) | Whether the consumer should close the folder after polling. Setting this option to false and having disconnect=false as well, then the consumer keeps the folder open between polls. | true | boolean |
| **copyTo** (consumer) | After processing a mail message, it can be copied to a mail folder with the given name. You can override this configuration value with a header with the key copyTo, allowing you to copy messages to folder names configured at runtime. |  | String |
| **decodeFilename** (consumer) | If set to true, the MimeUtility.decodeText method will be used to decode the filename. This is similar to setting JVM system property mail.mime.encodefilename. | false | boolean |
| **delete** (consumer) | Deletes the messages after they have been processed. This is done by setting the DELETED flag on the mail message. If false, the SEEN flag is set instead. You can override this configuration option by setting a header with the key delete to determine if the mail should be deleted or not. | false | boolean |
| **disconnect** (consumer) | Whether the consumer should disconnect after polling. If enabled, this forces Camel to connect on each poll. | false | boolean |
| **handleFailedMessage** (consumer) | If the mail consumer cannot retrieve a given mail message, then this option allows handling the caused exception by the consumer’s error handler. By enabling the bridge error handler on the consumer, then the Camel routing error handler can handle the exception instead. The default behavior would be the consumer throws an exception and no mails from the batch would be able to be routed by Camel. | false | boolean |
| **maxMessagesPerPoll** (consumer) | Specifies the maximum number of messages to gather per poll. By default, no maximum is set. Can be used to set a limit of e.g. 1000 to avoid downloading thousands of files when the server starts up. Set a value of 0 or negative to disable this option. |  | int |
| **mimeDecodeHeaders** (consumer) | This option enables transparent MIME decoding and unfolding for mail headers. | false | boolean |
| **moveTo** (consumer) | After processing a mail message, it can be moved to a mail folder with the given name. You can override this configuration value with a header with the key moveTo, allowing you to move messages to folder names configured at runtime. |  | String |
| **peek** (consumer) | Will mark the jakarta.mail.Message as peeked before processing the mail message. This applies to IMAPMessage messages types only. By using peek, the mail will not be eagerly marked as SEEN on the mail server, which allows us to roll back the mail message if there is a processing error in Camel. | true | boolean |
| **sendEmptyMessageWhenIdle** (consumer) | If the polling consumer did not poll any files, you can enable this option to send an empty message (no body) instead. | false | boolean |
| **skipFailedMessage** (consumer) | If the mail consumer cannot retrieve a given mail message, then this option allows skipping the message and move on to retrieve the next mail message. The default behavior would be the consumer throws an exception and no mails from the batch would be able to be routed by Camel. | false | boolean |
| **unseen** (consumer) | Whether to limit by unseen mails only. | true | boolean |
| **bridgeErrorHandler** (consumer (advanced)) | Allows for bridging the consumer to the Camel routing Error Handler, which mean any exceptions (if possible) occurred while the Camel consumer is trying to pickup incoming messages, or the likes, will now be processed as a message and handled by the routing Error Handler. Important: This is only possible if the 3rd party component allows Camel to be alerted if an exception was thrown. Some components handle this internally only, and therefore bridgeErrorHandler is not possible. In other situations we may improve the Camel component to hook into the 3rd party component and make this possible for future releases. By default the consumer will use the org.apache.camel.spi.ExceptionHandler to deal with exceptions, that will be logged at WARN or ERROR level and ignored. | false | boolean |
| **exceptionHandler** (consumer (advanced)) | To let the consumer use a custom ExceptionHandler. Notice if the option bridgeErrorHandler is enabled then this option is not in use. By default the consumer will deal with exceptions, that will be logged at WARN or ERROR level and ignored. |  | ExceptionHandler |
| **exchangePattern** (consumer (advanced)) | 
Sets the exchange pattern when the consumer creates an exchange.

Enum values:

-   InOnly
    
-   InOut
    





 |  | ExchangePattern |
| **failOnDuplicateFileAttachment** (consumer (advanced)) | Whether to fail processing the mail if the mail message contains attachments with duplicate file names. If set to false, then the duplicate attachment is skipped and a WARN is logged. If set to true, then an exception is thrown failing to process the mail message. | false | boolean |
| **fetchSize** (consumer (advanced)) | Sets the maximum number of messages to consume during a poll. This can be used to avoid overloading a mail server, if a mailbox folder contains a lot of messages. The default value of -1 means no fetch size and all messages will be consumed. Setting the value to 0 is a special corner case, where Camel will not consume any messages at all. | \-1 | int |
| **folderName** (consumer (advanced)) | The folder to poll. | INBOX | String |
| **generateMissingAttachmentNames** (consumer (advanced)) | Set this to 'uuid' to set a UUID for the filename of the attachment if no filename was set. |  | String |
| **handleDuplicateAttachmentNames** (consumer (advanced)) | Set the strategy to handle duplicate filenames of attachments never: attachments that have a filename which is already present in the attachments will be ignored unless failOnDuplicateFileAttachment is set to true. uuidPrefix: this will prefix the duplicate attachment filenames each with an uuid and underscore (uuid\_filename.fileextension). uuidSuffix: this will suffix the duplicate attachment filenames each with an underscore and uuid (filename\_uuid.fileextension). |  | String |
| **mailUidGenerator** (consumer (advanced)) | A pluggable MailUidGenerator that allows to use custom logic to generate UUID of the mail message. |  | MailUidGenerator |
| **mapMailMessage** (consumer (advanced)) | Specifies whether Camel should map the received mail message to Camel body/headers/attachments. If set to true, the body of the mail message is mapped to the body of the Camel IN message, the mail headers are mapped to IN headers, and the attachments to Camel IN attachment message. If this option is set to false, then the IN message contains a raw jakarta.mail.Message. You can retrieve this raw message by calling exchange.getIn().getBody(jakarta.mail.Message.class). | true | boolean |
| **pollStrategy** (consumer (advanced)) | A pluggable org.apache.camel.PollingConsumerPollingStrategy allowing you to provide your custom implementation to control error handling usually occurred during the poll operation before an Exchange have been created and being routed in Camel. |  | PollingConsumerPollStrategy |
| **postProcessAction** (consumer (advanced)) | Refers to an MailBoxPostProcessAction for doing post processing tasks on the mailbox once the normal processing ended. |  | MailBoxPostProcessAction |
| **bcc** (producer) | Sets the BCC email address. Separate multiple email addresses with comma. |  | String |
| **cc** (producer) | Sets the CC email address. Separate multiple email addresses with comma. |  | String |
| **from** (producer) | The from email address. | camel@localhost | String |
| **replyTo** (producer) | The Reply-To recipients (the receivers of the response mail). Separate multiple email addresses with a comma. |  | String |
| **subject** (producer) | The Subject of the message being sent. Note: Setting the subject in the header takes precedence over this option. |  | String |
| **to** (producer) | Sets the destination email address. Separate multiple email addresses with comma. |  | String |
| **useHeaderFrom** (producer) | Whether message headers From and Sender override the sender pre-configured in the endpoint URI. Defaults to false. Set to true to let message headers From and Sender override the endpoint URI sender. | false | boolean |
| **useHeaderRecipients** (producer) | Whether message headers To, CC, and BCC override the recipients pre-configured in the endpoint URI. Defaults to false. Set to true to let message headers override the endpoint URI recipients. | false | boolean |
| **useHeaderReplyTo** (producer) | Whether message header Reply-To overrides the replyTo pre-configured in the endpoint URI. Defaults to false. Set to true to let the message Reply-To header override the endpoint URI replyTo. | false | boolean |
| **useHeaderSubject** (producer) | Whether message header Subject overrides the subject pre-configured in the endpoint URI. Defaults to false. Set to true to let the message Subject header override the endpoint URI subject. | false | boolean |
| **javaMailSender** (producer (advanced)) | To use a custom org.apache.camel.component.mail.JavaMailSender for sending emails. |  | JavaMailSender |
| **lazyStartProducer** (producer (advanced)) | Whether the producer should be started lazy (on the first message). By starting lazy you can use this to allow CamelContext and routes to startup in situations where a producer may otherwise fail during starting and cause the route to fail being started. By deferring this startup to be lazy then the startup failure can be handled during routing messages via Camel’s routing error handlers. Beware that when the first message is processed then creating and starting the producer may take a little time and prolong the total processing time of the processing. | false | boolean |
| **additionalJavaMailProperties** (advanced) | Sets additional java mail properties, that will append/override any default properties that are set based on all the other options. This is useful if you need to add some special options but want to keep the others as is. This is a multi-value option with prefix: mail. |  | Properties |
| **alternativeBodyHeader** (advanced) | Specifies the key to an IN message header that contains an alternative email body. For example, if you send emails in text/html format and want to provide an alternative mail body for non-HTML email clients, set the alternative mail body with this key as a header. | CamelMailAlternativeBody | String |
| **attachmentsContentTransferEncodingResolver** (advanced) | To use a custom AttachmentsContentTransferEncodingResolver to resolve what content-type-encoding to use for attachments. |  | AttachmentsContentTransferEncodingResolver |
| **authenticator** (advanced) | The authenticator for login. If set then the password and username are ignored. It can be used for tokens which can expire and therefore must be read dynamically. |  | MailAuthenticator |
| **binding** (advanced) | Sets the binding used to convert from a Camel message to and from a Mail message. |  | MailBinding |
| **connectionTimeout** (advanced) | The connection timeout in milliseconds. | 30000 | int |
| **contentType** (advanced) | The mail message content type. Use text/html for HTML mails. | text/plain | String |
| **contentTypeResolver** (advanced) | Resolver to determine Content-Type for file attachments. |  | ContentTypeResolver |
| **debugMode** (advanced) | Enable debug mode on the underlying mail framework. The SUN Mail framework logs the debug messages to System.out by default. | false | boolean |
| **headerFilterStrategy** (advanced) | To use a custom org.apache.camel.spi.HeaderFilterStrategy to filter headers. |  | HeaderFilterStrategy |
| **ignoreUnsupportedCharset** (advanced) | Option to let Camel ignore unsupported charset in the local JVM when sending mails. If the charset is unsupported, then charset=XXX (where XXX represents the unsupported charset) is removed from the content-type, and it relies on the platform default instead. | false | boolean |
| **ignoreUriScheme** (advanced) | Option to let Camel ignore unsupported charset in the local JVM when sending mails. If the charset is unsupported, then charset=XXX (where XXX represents the unsupported charset) is removed from the content-type, and it relies on the platform default instead. | false | boolean |
| **javaMailProperties** (advanced) | Sets the java mail options. Will clear any default properties and only use the properties provided for this method. |  | Properties |
| **maxMultipartDepth** (advanced) | The maximum nesting depth of multipart MIME parts the consumer descends into when extracting attachments. A message nested deeper than this has its deeper parts skipped, so a crafted deeply nested multipart cannot exhaust the stack. Increase it only if a legitimate source produces unusually deep nesting. | 20 | int |
| **session** (advanced) | Specifies the mail session that camel should use for all mail interactions. Useful in scenarios where mail sessions are created and managed by some other resource, such as a JavaEE container. When using a custom mail session, then the hostname and port from the mail session will be used (if configured on the session). |  | Session |
| **useInlineAttachments** (advanced) | Whether to use disposition inline or attachment. | false | boolean |
| **idempotentRepository** (filter) | A pluggable repository org.apache.camel.spi.IdempotentRepository which allows to cluster consuming from the same mailbox, and let the repository coordinate whether a mail message is valid for the consumer to process. By default no repository is in use. |  | IdempotentRepository |
| **idempotentRepositoryRemoveOnCommit** (filter) | When using idempotent repository, then when the mail message has been successfully processed and is committed, should the message id be removed from the idempotent repository (default) or be kept in the repository. By default its assumed the message id is unique and has no value to be kept in the repository, because the mail message will be marked as seen/moved or deleted to prevent it from being consumed again. And therefore having the message id stored in the idempotent repository has little value. However this option allows to store the message id, for whatever reason you may have. | true | boolean |
| **searchTerm** (filter) | Refers to a jakarta.mail.search.SearchTerm which allows to filter mails based on search criteria such as subject, body, from, sent after a certain date etc. This is a multi-value option with prefix: searchTerm. |  | SearchTerm |
| **backoffErrorThreshold** (scheduler) | The number of subsequent error polls (failed due some error) that should happen before the backoffMultipler should kick-in. |  | int |
| **backoffIdleThreshold** (scheduler) | The number of subsequent idle polls that should happen before the backoffMultipler should kick-in. |  | int |
| **backoffMultiplier** (scheduler) | To let the scheduled polling consumer backoff if there has been a number of subsequent idles/errors in a row. The multiplier is then the number of polls that will be skipped before the next actual attempt is happening again. When this option is in use then backoffIdleThreshold and/or backoffErrorThreshold must also be configured. |  | int |
| **delay** (scheduler) | Milliseconds before the next poll. | 60000 | long |
| **greedy** (scheduler) | If greedy is enabled, then the ScheduledPollConsumer will run immediately again, if the previous run polled 1 or more messages. | false | boolean |
| **initialDelay** (scheduler) | Milliseconds before the first poll starts. | 1000 | long |
| **repeatCount** (scheduler) | Specifies a maximum limit of number of fires. So if you set it to 1, the scheduler will only fire once. If you set it to 5, it will only fire five times. A value of zero or negative means fire forever. | 0 | long |
| **runLoggingLevel** (scheduler) | 

The consumer logs a start/complete log line when it polls. This option allows you to configure the logging level for that.

Enum values:

-   TRACE
    
-   DEBUG
    
-   INFO
    
-   WARN
    
-   ERROR
    
-   OFF
    





 | TRACE | LoggingLevel |
| **scheduledExecutorService** (scheduler) | Allows for configuring a custom/shared thread pool to use for the consumer. By default each consumer has its own single threaded thread pool. |  | ScheduledExecutorService |
| **scheduler** (scheduler) | To use a cron scheduler from either camel-spring or camel-quartz component. Use value spring or quartz for built in scheduler. | none | Object |
| **schedulerProperties** (scheduler) | To configure additional properties when using a custom scheduler or any of the Quartz, Spring based scheduler. This is a multi-value option with prefix: scheduler. |  | Map |
| **startScheduler** (scheduler) | Whether the scheduler should be auto started. | true | boolean |
| **timeUnit** (scheduler) | 

Time unit for initialDelay and delay options.

Enum values:

-   NANOSECONDS
    
-   MICROSECONDS
    
-   MILLISECONDS
    
-   SECONDS
    
-   MINUTES
    
-   HOURS
    
-   DAYS
    





 | MILLISECONDS | TimeUnit |
| **useFixedDelay** (scheduler) | Controls if fixed delay or fixed rate is used. See ScheduledExecutorService in JDK for details. | true | boolean |
| **password** (security) | The password for login. See also setAuthenticator(MailAuthenticator). |  | String |
| **sslContextParameters** (security) | To configure security using SSLContextParameters. |  | SSLContextParameters |
| **useJavaMailSessionPropertiesFromHeaders** (security) | Whether to allow dynamic JavaMail session properties (message headers whose key starts with mail.smtp. or mail.smtps.) to override the endpoint configuration on a per-message basis. This is disabled by default. Only enable it when these headers originate exclusively from trusted route logic, never from data crossing a trust boundary (for example HTTP query parameters, or JMS/Kafka messages from untrusted producers). When enabled, an attacker able to set these headers could weaken transport security (such as mail.smtp.ssl.trust or mail.smtp.starttls.enable) or redirect the SMTP connection. | false | boolean |
| **username** (security) | The username for login. See also setAuthenticator(MailAuthenticator). |  | String |
| **sortTerm** (sort) | Sorting order for messages. Only natively supported for IMAP. Emulated to some degree when using POP3 or when IMAP server does not have the SORT capability. |  | SortTerm\[\] |

## Message Headers

The Mail component supports the following message header(s), which is/are listed below:

   
| Name | Description | Default | Type |
| --- | --- | --- | --- |
| **Subject** (common) Constant: [`MAIL_SUBJECT`](https://javadoc.io/doc/org.apache.camel/camel-mail/latest/org/apache/camel/component/mail/MailConstants.html#MAIL_SUBJECT) | Subject. |  | String |
| **From** (common) Constant: [`MAIL_FROM`](https://javadoc.io/doc/org.apache.camel/camel-mail/latest/org/apache/camel/component/mail/MailConstants.html#MAIL_FROM) | From. |  | String |
| **To** (common) Constant: [`MAIL_TO`](https://javadoc.io/doc/org.apache.camel/camel-mail/latest/org/apache/camel/component/mail/MailConstants.html#MAIL_TO) | To. |  | String |
| **Cc** (common) Constant: [`MAIL_CC`](https://javadoc.io/doc/org.apache.camel/camel-mail/latest/org/apache/camel/component/mail/MailConstants.html#MAIL_CC) | Cc. |  | String |
| **Bcc** (common) Constant: [`MAIL_BCC`](https://javadoc.io/doc/org.apache.camel/camel-mail/latest/org/apache/camel/component/mail/MailConstants.html#MAIL_BCC) | Bcc. |  | String |
| **Reply-To** (common) Constant: [`MAIL_REPLY_TO`](https://javadoc.io/doc/org.apache.camel/camel-mail/latest/org/apache/camel/component/mail/MailConstants.html#MAIL_REPLY_TO) | Reply to. |  | String |
| **contentType** (common) Constant: [`MAIL_CONTENT_TYPE`](https://javadoc.io/doc/org.apache.camel/camel-mail/latest/org/apache/camel/component/mail/MailConstants.html#MAIL_CONTENT_TYPE) | The content type. |  | String |
| **CamelMailCopyTo** (consumer) Constant: [`MAIL_COPY_TO`](https://javadoc.io/doc/org.apache.camel/camel-mail/latest/org/apache/camel/component/mail/MailConstants.html#MAIL_COPY_TO) | After processing a mail message, it can be copied to a mail folder with the given name. |  | String |
| **CamelMailMoveTo** (consumer) Constant: [`MAIL_MOVE_TO`](https://javadoc.io/doc/org.apache.camel/camel-mail/latest/org/apache/camel/component/mail/MailConstants.html#MAIL_MOVE_TO) | After processing a mail message, it can be moved to a mail folder with the given name. |  | String |
| **CamelMailDelete** (consumer) Constant: [`MAIL_DELETE`](https://javadoc.io/doc/org.apache.camel/camel-mail/latest/org/apache/camel/component/mail/MailConstants.html#MAIL_DELETE) | Deletes the messages after they have been processed. |  | boolean |
| **CamelMailMessageId** (common) Constant: [`MAIL_MESSAGE_ID`](https://javadoc.io/doc/org.apache.camel/camel-mail/latest/org/apache/camel/component/mail/MailConstants.html#MAIL_MESSAGE_ID) | The message ID. |  | String |

## Usage

Typically, you specify a URI with login credentials as follows:

SMTP endpoint example

smtp://\[username@\]host\[:port\]\[?password=somepwd\]

Alternatively, it is possible to specify both the username and the password as query options:

smtp://host\[:port\]?password=somepwd&username=someuser

For example:

smtp://mycompany.mailserver:30?password=tiger&username=scott

### Component alias names

-   `IMAP`
    
-   `IMAPs`
    
-   `POP3s`
    
-   `POP3s`
    
-   `SMTP`
    
-   `SMTPs`
    

### Default ports

Default port numbers are supported. If the port number is omitted, Camel determines the port number to use based on the protocol.

 
| Protocol | Default Port Number |
| --- | --- |
| `SMTP` | `25` |
| `SMTPS` | `465` |
| `POP3` | `110` |
| `POP3S` | `995` |
| `IMAP` | `143` |
| `IMAPS` | `993` |

### SSL support

The underlying mail framework is responsible for providing SSL support. You may either configure SSL/TLS support by completely specifying the necessary Java Mail API configuration options, or you may provide a configured SSLContextParameters through the component or endpoint configuration.

#### Using the JSSE Configuration Utility

The mail component supports SSL/TLS configuration through the [Camel JSSE Configuration Utility](../../manual/camel-configuration-utilities.md). This utility greatly decreases the amount of component-specific code you need to write and is configurable at the endpoint and component levels. The following examples demonstrate how to use the utility with the mail component.

Programmatic configuration of the endpoint

_Java-only: programmatic `SSLContextParameters` configuration and registry binding_

```java
KeyStoreParameters ksp = new KeyStoreParameters();
ksp.setResource("/users/home/server/truststore.jks");
ksp.setPassword("keystorePassword");
TrustManagersParameters tmp = new TrustManagersParameters();
tmp.setKeyStore(ksp);
SSLContextParameters scp = new SSLContextParameters();
scp.setTrustManagers(tmp);
Registry registry = ...
registry.bind("sslContextParameters", scp);
...
from(...)
    .to("smtps://smtp.google.com?username=user@gmail.com&password=password&sslContextParameters=#sslContextParameters");
```

Spring DSL based configuration of endpoint

```xml
...
<camel:sslContextParameters id="sslContextParameters">
  <camel:trustManagers>
    <camel:keyStore resource="/users/home/server/truststore.jks" password="keystorePassword"/>
  </camel:trustManagers>
</camel:sslContextParameters>...
...
<to uri="smtps://smtp.google.com?username=user@gmail.com&password=password&sslContextParameters=#sslContextParameters"/>...
```

#### Configuring JavaMail Directly

Camel uses Jakarta JavaMail, which only trusts certificates issued by well-known Certificate Authorities (the default JVM trust configuration). If you issue your own certificates, you have to import the CA certificates into the JVM’s Java trust/key store files, override the default JVM trust/key store files (see `SSLNOTES.txt` in JavaMail for details).

### Mail Message Content

Camel uses the message exchange’s IN body as the [MimeMessage](http://java.sun.com/javaee/5/docs/api/javax/mail/internet/MimeMessage.md) text content. The body is converted to `String.class`.

Camel copies all of the exchange’s IN headers to the [MimeMessage](http://java.sun.com/javaee/5/docs/api/javax/mail/internet/MimeMessage.md) headers.

The subject of the [MimeMessage](http://java.sun.com/javaee/5/docs/api/javax/mail/internet/MimeMessage.md) can be configured using a header property on the IN message. The code below demonstrates this:

-   Java
    
-   XML
    
-   YAML
    

```java
from("direct:a").setHeader("subject", constant(subject)).to("smtp://james2@localhost");
```

```xml
<route>
  <from uri="direct:a"/>
  <setHeader name="subject">
    <constant>some subject</constant>
  </setHeader>
  <to uri="smtp://james2@localhost"/>
</route>
```

```yaml
- route:
    from:
      uri: direct:a
      steps:
        - setHeader:
            name: subject
            constant: "some subject"
        - to:
            uri: smtp://james2@localhost
```

The same applies for other MimeMessage headers such as recipients, so you can use a header property as `To`:

_Java-only: ProducerTemplate API with mail headers_

```java
Map<String, Object> headers = new HashMap<String, Object>();
headers.put("To", "davsclaus@apache.org");
headers.put("From", "jstrachan@apache.org");
headers.put("Subject", "Camel rocks");
headers.put("CamelFileName", "fileOne");
headers.put("org.apache.camel.test", "value");

String body = "Hello Claus.\nYes it does.\n\nRegards James.";
template.sendBodyAndHeaders("smtp://davsclaus@apache.org", body, headers);
```

When using the MailProducer to send the mail to server, you should be able to get the message id of the [MimeMessage](http://java.sun.com/javaee/5/docs/api/javax/mail/internet/MimeMessage.md) with the key `CamelMailMessageId` from the Camel message header.

### Headers take precedence over pre-configured recipients

The recipients specified in the message headers always take precedence over recipients pre-configured in the endpoint URI. The idea is that if you provide any recipients in the message headers, that is what you get. The recipients pre-configured in the endpoint URI are treated as a fallback.

In the sample code below, the email message is sent to `davsclaus@apache.org`, because it takes precedence over the pre-configured recipient, `info@mycompany.com`. Any `CC` and `BCC` settings in the endpoint URI are also ignored, and those recipients will not receive any mail. The choice between headers and pre-configured settings is all or nothing: the mail component _either_ takes the recipients exclusively from the headers or exclusively from the pre-configured settings. It is not possible to mix and match headers and pre-configured settings.

_Java-only: ProducerTemplate API showing header override of pre-configured recipient_

```java
Map<String, Object> headers = new HashMap<String, Object>();
headers.put("to", "davsclaus@apache.org");

template.sendBodyAndHeaders("smtp://admin@localhost?to=info@mycompany.com", "Hello World", headers);
```

#### Opting out of header overrides (trust-boundary hardening)

For routes where message headers originate from an untrusted source (for example messages bridged from an HTTP endpoint, a JMS queue, or a Kafka topic), allowing inbound headers to override recipients, sender, subject, or reply-to addresses can enable an attacker to redirect mail, intercept replies, forge the sender address, or inject arbitrary subjects. Four opt-in `@UriParam` options let you lock the endpoint configuration so it cannot be overridden by message headers:

  
| Option | Default | Effect when set to `true` |
| --- | --- | --- |
| `useHeaderRecipients` | `false` | Message To/CC/BCC headers can override the endpoint URI recipients. |
| `useHeaderFrom` | `false` | Message From/Sender headers can override the endpoint URI sender. |
| `useHeaderSubject` | `false` | Message Subject header can override the endpoint URI subject. |
| `useHeaderReplyTo` | `false` | Message Reply-To header can override the endpoint URI replyTo. |

All four default to `false`. Set to `true` to let message headers override the endpoint configuration.

Example:

-   Java
    
-   XML
    
-   YAML
    

```java
.to("smtp://relay@mailhost?to=safe@mycompany.com&from=noreply@mycompany.com&useHeaderRecipients=false&useHeaderFrom=false&useHeaderReplyTo=false");
```

```xml
<to uri="smtp://relay@mailhost?to=safe@mycompany.com&amp;from=noreply@mycompany.com&amp;useHeaderRecipients=false&amp;useHeaderFrom=false&amp;useHeaderReplyTo=false"/>
```

```yaml
- to:
    uri: smtp://relay@mailhost
    parameters:
      to: "safe@mycompany.com"
      from: "noreply@mycompany.com"
      useHeaderRecipients: false
      useHeaderFrom: false
      useHeaderReplyTo: false
```

> **Note**
> These options do **not** strip the headers from the exchange. See the [Deployment hardening](../../manual/security-model.html#_deployment_hardening) section of the Security Model.

### Multiple recipients for easier configuration

It is possible to set multiple recipients using a comma-separated or a semicolon-separated list. This applies both to header settings and to settings in an endpoint URI. For example:

_Java-only: programmatic header map with semicolon-separated recipients_

```java
Map<String, Object> headers = new HashMap<String, Object>();
headers.put("to", "davsclaus@apache.org ; jstrachan@apache.org ; ningjiang@apache.org");
```

The preceding example uses a semicolon, `;`, as the separator character.

### Setting sender name and email

You can specify recipients in the format, `name <email>`, to include both the name and the email address of the recipient.

For example, you define the following headers on the message:

_Java-only: programmatic header map construction_

```java
Map headers = new HashMap();
map.put("Subject", "Camel is cool");
map.put("From", "James Strachan <jstrachan@apache.org>");
map.put("To", "Claus Ibsen <davsclaus@apache.org>");
map.put("Cc", "An Other <another@example.com>");
map.put("Bcc", "An Other <another@example.com>");
map.put("Reply-To", "An Other <another@example.com>");
```

### JavaMail API (ex SUN JavaMail)

[JavaMail API](https://java.net/projects/javamail/pages/Home) is used under the hood for consuming and producing mails. We encourage end-users to consult these references when using either POP3 or IMAP protocol. Note particularly that POP3 has a much more limited set of features than IMAP.

-   [JavaMail POP3 API](https://javamail.java.net/nonav/docs/api/com/sun/mail/pop3/package-summary.md)
    
-   [JavaMail IMAP API](https://javamail.java.net/nonav/docs/api/com/sun/mail/imap/package-summary.md)
    
-   And generally about the [MAIL Flags](https://javamail.java.net/nonav/docs/api/javax/mail/Flags.md)
    

### Polling Optimization

The parameter maxMessagePerPoll and fetchSize allow you to restrict the number of messages that should be processed for each poll. These parameters should help to prevent bad performance when working with folders that contain a lot of messages. In previous versions, these parameters have been evaluated too late, so that big mailboxes could still cause performance problems. With Camel 3.1, these parameters are evaluated earlier during the poll to avoid these problems.

## Examples

We start with a simple route that sends the messages received from a JMS queue as emails. The email account is the `admin` account on `mymailserver.com`.

-   Java
    
-   XML
    
-   YAML
    

```java
from("jms://queue:subscription").to("smtp://admin@mymailserver.com?password=secret");
```

```xml
<route>
  <from uri="jms://queue:subscription"/>
  <to uri="smtp://admin@mymailserver.com?password=secret"/>
</route>
```

```yaml
- route:
    from:
      uri: jms://queue:subscription
      steps:
        - to:
            uri: smtp://admin@mymailserver.com
            parameters:
              password: secret
```

In the next sample, we poll a mailbox for new emails once every minute.

-   Java
    
-   XML
    
-   YAML
    

```java
from("imap://admin@mymailserver.com?password=secret&unseen=true&delay=60000")
    .to("seda://mails");
```

```xml
<route>
  <from uri="imap://admin@mymailserver.com?password=secret&amp;unseen=true&amp;delay=60000"/>
  <to uri="seda://mails"/>
</route>
```

```yaml
- route:
    from:
      uri: imap://admin@mymailserver.com
      parameters:
        password: secret
        unseen: true
        delay: 60000
      steps:
        - to:
            uri: seda://mails
```

### Sending mail with attachment

> **Warning**
> **Attachments are not supported by all Camel components**
>
> The _Attachments API_ is based on the Java Activation Framework and is generally only used by the Mail API. Since many of the other Camel components do not support attachments, the attachments could potentially be lost as they propagate along the route. The rule of thumb, therefore, is to add attachments just before sending a message to the mail endpoint.

The mail component supports attachments. In the sample below, we send a mail message containing a plain text message with a logo file attachment.

_Java-only: programmatic `Exchange` and attachment manipulation via Camel API_

```java
// create an exchange with a normal body and attachment to be produced as email
Endpoint endpoint = context.getEndpoint("smtp://james@mymailserver.com?password=secret");

// create the exchange with the mail message that is multipart with a file and a Hello World text/plain message.
Exchange exchange = endpoint.createExchange();
AttachmentMessage in = exchange.getIn(AttachmentMessage.class);
in.setBody("Hello World");
DefaultAttachment att = new DefaultAttachment(new FileDataSource("src/test/data/logo.jpeg"));
att.addHeader("Content-Description", "some sample content");
in.addAttachmentObject("logo.jpeg", att);

// create a producer that can produce the exchange (= send the mail)
Producer producer = endpoint.createProducer();
// start the producer
producer.start();
// and let it go (processes the exchange by sending the email)
producer.process(exchange);
```

### SSL example

In this sample, we want to poll our Google Mail inbox for mails. To download mail onto a local mail client, Google Mail requires you to enable and configure SSL. This is done by logging into your Google Mail account and changing your settings to allow IMAP access. Google has extensive documentation on how to do this.

-   Java
    
-   XML
    
-   YAML
    

```java
from("imaps://imap.gmail.com?username=YOUR_USERNAME@gmail.com&password=YOUR_PASSWORD&delete=false&unseen=true&delay=60000")
    .to("log:newmail");
```

```xml
<route>
  <from uri="imaps://imap.gmail.com?username=YOUR_USERNAME@gmail.com&amp;password=YOUR_PASSWORD&amp;delete=false&amp;unseen=true&amp;delay=60000"/>
  <to uri="log:newmail"/>
</route>
```

```yaml
- route:
    from:
      uri: imaps://imap.gmail.com
      parameters:
        username: "YOUR_USERNAME@gmail.com"
        password: YOUR_PASSWORD
        delete: false
        unseen: true
        delay: 60000
      steps:
        - to:
            uri: log:newmail
```

The preceding route polls the Google Mail inbox for new mails once every minute and logs the received messages to the `newmail` logger category. Running the sample with `DEBUG` logging enabled, we can monitor the progress in the logs:

```text
2008-05-08 06:32:09,640 DEBUG MailConsumer - Connecting to MailStore imaps//imap.gmail.com:993 (SSL enabled), folder=INBOX
2008-05-08 06:32:11,203 DEBUG MailConsumer - Polling mailfolder: imaps//imap.gmail.com:993 (SSL enabled), folder=INBOX
2008-05-08 06:32:11,640 DEBUG MailConsumer - Fetching 1 messages. Total 1 messages.
2008-05-08 06:32:12,171 DEBUG MailConsumer - Processing message: messageNumber=[332], from=[James Bond <007@mi5.co.uk>], to=YOUR_USERNAME@gmail.com], subject=[...
2008-05-08 06:32:12,187 INFO  newmail - Exchange[MailMessage: messageNumber=[332], from=[James Bond <007@mi5.co.uk>], to=YOUR_USERNAME@gmail.com], subject=[...
```

### Consuming mails with attachment

In this sample, we poll a mailbox and store all attachments from the mails as files. First, we define a route to poll the mailbox. As this sample is based on Google Mail, it uses the same route as shown in the SSL sample:

_Java-only: uses custom `Processor` to handle mail attachments_

```java
from("imaps://imap.gmail.com?username=YOUR_USERNAME@gmail.com&password=YOUR_PASSWORD&delete=false&unseen=true&delay=60000")
    .process(new MyMailProcessor());
```

Instead of logging the mail, we use a processor where we can process the mail from java code:

_Java-only: custom `Processor` for extracting and saving attachments_

```java
public void process(Exchange exchange) throws Exception {
    // the API is a bit clunky, so we need to loop
    AttachmentMessage attachmentMessage = exchange.getMessage(AttachmentMessage.class);
    Map<String, DataHandler> attachments = attachmentMessage.getAttachments();
    if (attachments.size() > 0) {
        for (String name : attachments.keySet()) {
            DataHandler dh = attachments.get(name);
            // get the file name
            String filename = dh.getName();

            // get the content and convert it to byte[]
            byte[] data = exchange.getContext().getTypeConverter()
                              .convertTo(byte[].class, dh.getInputStream());

            // write the data to a file
            FileOutputStream out = new FileOutputStream(filename);
            out.write(data);
            out.flush();
            out.close();
        }
    }
}
```

As you can see the API to handle attachments is a bit clunky, but it’s there, so you can get the `javax.activation.DataHandler` so you can handle the attachments using standard API.

### How to split a mail message with attachments

In this example, we consume mail messages which may have a number of attachments. What we want to do is to use the Splitter EIP per individual attachment, to process the attachments separately. For example, if the mail message has five attachments, we want the Splitter to process five messages, each having a single attachment. To do this, we need to provide a custom Expression to the Splitter where we provide a List<Message> that contains the five messages with the single attachment.

The code is provided out of the box in Camel 2.10 onwards in the `camel-mail` component. The code is in the class: `org.apache.camel.component.mail.SplitAttachmentsExpression`, which you can find the source code [here](https://github.com/apache/camel/blob/main/components/camel-mail/src/main/java/org/apache/camel/component/mail/SplitAttachmentsExpression.java)

In the Camel route, you then need to use this Expression in the route as shown below:

If you use XML DSL, then you need to declare a method call expression in the Splitter as shown below

_XML-only: `method` expression with `beanType` attribute is XML DSL specific_

```xml
<split>
  <method beanType="org.apache.camel.component.mail.SplitAttachmentsExpression"/>
  <to uri="mock:split"/>
</split>
```

You can also split the attachments as byte\[\] to be stored as the message body. This is done by creating the expression with boolean true

_Java-only: programmatic `SplitAttachmentsExpression` configuration_

```java
SplitAttachmentsExpression split = SplitAttachmentsExpression(true);
```

And then use the expression with the splitter EIP.

### Using custom SearchTerm

You can configure a `searchTerm` on the `MailEndpoint` which allows you to filter out unwanted mails.

For example, to filter mails to contain Camel in either Subject or Text, you can do as follows:

-   Java
    
-   XML
    
-   YAML
    

```java
from("imaps://mymailseerver?username=foo&password=secret&searchTerm.subjectOrBody=Camel")
    .to("bean:myBean");
```

```xml
<route>
  <from uri="imaps://mymailseerver?username=foo&password=secret&searchTerm.subjectOrBody=Camel"/>
  <to uri="bean:myBean"/>
</route>
```

```yaml
- route:
    from:
      uri: imaps://mymailseerver
      parameters:
        username: foo
        password: secret
        searchTerm.subjectOrBody: Camel
      steps:
        - to:
            uri: bean:myBean
```

Notice we use the `"searchTerm.subjectOrBody"` as a parameter key to indicate that we want to search on mail subject or body, to contain the word "Camel".  
The class `org.apache.camel.component.mail.SimpleSearchTerm` has a number of options you can configure:

Or to get the new unseen emails going 24 hours back in time, you can do. Notice the "now-24h" syntax. See the table below for more details.

-   Java
    
-   XML
    
-   YAML
    

```java
from("imaps://mymailseerver?username=foo&password=secret&searchTerm.fromSentDate=now-24h")
    .to("bean:myBean");
```

```xml
<route>
  <from uri="imaps://mymailseerver?username=foo&password=secret&searchTerm.fromSentDate=now-24h"/>
  <to uri="bean:myBean"/>
</route>
```

```yaml
- route:
    from:
      uri: imaps://mymailseerver
      parameters:
        username: foo
        password: secret
        searchTerm.fromSentDate: now-24h
      steps:
        - to:
            uri: bean:myBean
```

You can have multiple searchTerm in the endpoint uri configuration. They would then be combined using the `AND` operator, e.g., so both conditions must match. For example, to get the last unseen emails going back 24 hours which has Camel in the mail subject you can do:

-   Java
    
-   XML
    
-   YAML
    

```java
from("imaps://mymailseerver?username=foo&password=secret&searchTerm.subject=Camel&searchTerm.fromSentDate=now-24h")
    .to("bean:myBean");
```

```xml
<route>
  <from uri="imaps://mymailseerver?username=foo&password=secret&searchTerm.subject=Camel&searchTerm.fromSentDate=now-24h"/>
  <to uri="bean:myBean"/>
</route>
```

```yaml
- route:
    from:
      uri: imaps://mymailseerver
      parameters:
        username: foo
        password: secret
        searchTerm.subject: Camel
        searchTerm.fromSentDate: now-24h
      steps:
        - to:
            uri: bean:myBean
```

The `SimpleSearchTerm` is designed to be easily configurable from a POJO, so you can also configure it using a <bean> style in XML

_XML-only: Spring `<bean>` configuration for \`SimpleSearchTerm\`_

```xml
<bean id="mySearchTerm" class="org.apache.camel.component.mail.SimpleSearchTerm">
  <property name="subject" value="Order"/>
  <property name="to" value="acme-order@acme.com"/>
  <property name="fromSentDate" value="now"/>
 </bean>
```

You can then refer to this bean, using #beanId in your Camel route as shown:

-   Java
    
-   XML
    
-   YAML
    

```java
from("imaps://mymailseerver?username=foo&password=secret&searchTerm=#mySearchTerm")
    .to("bean:myBean");
```

```xml
<route>
  <from uri="imaps://mymailseerver?username=foo&password=secret&searchTerm=#mySearchTerm"/>
  <to uri="bean:myBean"/>
</route>
```

```yaml
- route:
    from:
      uri: imaps://mymailseerver
      parameters:
        username: foo
        password: secret
        searchTerm: "#mySearchTerm"
      steps:
        - to:
            uri: bean:myBean
```

In Java there is a builder class to build compound `SearchTerms` using the `org.apache.camel.component.mail.SearchTermBuilder` class. This allows you to build complex terms such as:

_Java-only: programmatic `SearchTermBuilder` for complex mail filters_

```java
// we just want the unseen mails that are not spam
SearchTermBuilder builder = new SearchTermBuilder();

builder.unseen().body(Op.not, "Spam").subject(Op.not, "Spam")
  // which was sent from either foo or bar
  .from("foo@somewhere.com").from(Op.or, "bar@somewhere.com");
  // ... and we could continue building the terms

SearchTerm term = builder.build();
```

### Using headers with additional Java Mail Sender properties

When sending mails, then you can provide dynamic java mail properties for the `JavaMailSender` from the Exchange as message headers with keys starting with `mail.smtp.` (or `mail.smtps.`).

You can set any of the `mail.smtp` properties which you can find in the Java Mail documentation.

For example, to provide a dynamic uuid in `mail.smtp.from` (SMTP MAIL command):

_Java-only: `.method()` expression for dynamic UUID generation is Java DSL specific_

```java
.setHeader("from", constant("reply2me@foo.com"))
.setHeader("mail.smtp.from", method(UUID.class, "randomUUID"))
.to("smtp://mymailserver:1234?useJavaMailSessionPropertiesFromHeaders=true");
```

> **Note**
> This is only supported when **not** using a custom `JavaMailSender`.

> **Warning**
> This feature is **disabled by default** and must be explicitly enabled with `useJavaMailSessionPropertiesFromHeaders=true`. The `mail.smtp.*` / `mail.smtps.*` keys are a Camel-internal namespace that is not filtered by any `HeaderFilterStrategy`, so if these headers can originate from data crossing a trust boundary (for example HTTP query parameters, or JMS/Kafka messages from untrusted producers) an attacker could weaken transport security (such as `mail.smtp.ssl.trust` or `mail.smtp.starttls.enable`) or redirect the SMTP connection. Only enable the option when these headers are set exclusively by trusted route logic, and strip the namespace with `removeHeaders("mail.smtp.*", "mail.smtps.*")` before the producer when bridging an untrusted source. See the [Camel Security Model](../../manual/security-model.md) for the general pattern.